# data_platform_poc

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
tests/: test_math_ops.py
tools/: generate_exclude_files.py  install_jfrog.py  poetry_authenticate.py
